resume removed from website

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           This experience has deepened my understanding of scalable solutions and technologies like Docker and Kubernetes.
         </p>
       </div>
-      <p>For more details on my experience, you can download my <a href="resume.pdf" target="_blank">resume</a>.</p>
+      <!-- <p>For more details on my experience, you can download my <a href="resume.pdf" target="_blank">resume</a>.</p> -->
     </section>
     
     <div class="separator2"></div>
